# agent-factory

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
reports/: 2026-07-07-current-workspace-subagent-test.md  2026-07-07-provider-test-codex.md  2026-07-07-workspace-subagent-test.md  2026-07-10-factory-refactor.md  2026-07-10-remote-publication.md  agent-factory-technical-overview.md  lesson-events.tsv  lessons.md  workspace-test-2026-07-05.md  workspace-test-2026-07-06.md
skills/agent-workspace-builder/evals/runs/iteration-1/eval-2-weekly-web-monitor/without_skill/run-1/outputs/workspace/: .gitignore  AGENTS.md  README.md  pyproject.toml
skills/agent-workspace-builder/evals/runs/iteration-1/eval-2-weekly-web-monitor/without_skill/run-1/outputs/workspace/config/: targets.example.json
skills/agent-workspace-builder/evals/runs/iteration-1/eval-2-weekly-web-monitor/without_skill/run-1/outputs/workspace/reports/: 2026-07-10-144048-generation.md  README.md
skills/agent-workspace-builder/evals/runs/iteration-1/eval-2-weekly-web-monitor/without_skill/run-1/outputs/workspace/skills/: README.md
skills/agent-workspace-builder/evals/runs/iteration-1/eval-2-weekly-web-monitor/without_skill/run-1/outputs/workspace/src/weekly_web_monitor/: __init__.py  cli.py  config.py  fetch.py  monitor.py  store.py
skills/agent-workspace-builder/evals/runs/iteration-1/eval-2-weekly-web-monitor/without_skill/run-1/outputs/workspace/tests/: test_monitor.py
(+175 files in other folders)
