[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weekly-web-monitor"
version = "0.1.0"
description = "Local weekly web monitor with human-approved notifications"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
weekly-web-monitor = "weekly_web_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
